--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     <application
         android:label="tarea6_flutter"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ray"
         android:networkSecurityConfig="@xml/network_security_config"
         >
         <activity
